--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -71,3 +71,10 @@ en-meep:
       swf_asset_suffix: "on a new body meep"
       pet_type_suffix: "for the first meep"
       pet_state_prefix: "a new meep for"
+  
+  users:
+    top_contributors:
+      header: Top Conmeeputors
+      rank: Reep
+      user: Meepit
+      points: Peeps
