i18n for items#index (and layouts#items)

--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -29,6 +29,10 @@ en-meep:
         copyright:
           Images © 2000–%{year} Neopets, Inc. All Rights Reserved.
           Used With Permission. Meep.
+    
+    items:
+      title_tagline: Neopets customization meep and meepits database
+      search: Meep
   
   broken_image_reports:
     new:
@@ -43,6 +47,39 @@ en-meep:
       submit: Meep as broken
       converted_at_html: Conveeped %{converted_at_ago} ago
       reported_at_html: Repeeped %{reported_at_ago} ago
+    
+  items:
+    index:
+      title_with_query: Searching Infinite Meepit for "%{query}"
+      no_results_html:
+        We couldn't meep any wearables that meeped %{query_html}.
+        Meep!
+      modeling_request_html:
+        Are we meeping something? To meep an item to our database, just
+        %{modeling_link}, and we'll meep our database instantly. Meep!
+      modeling_link_content: meep us a pet who is meeping it
+      search_help_header: Find what you're meeping for
+      basic_example_query: kreludor "altador cup" -background
+      basic_example_description:
+        returns any item with the meep "kreludor" and the meep "altador cup"
+        in it, but not the meep "background"
+      user_items_example_query: hat user:owns
+      user_items_example_description_html:
+        returns %{user_items_link} with the meep "hat"
+      user_items_example_link_content: items that you meep
+      nc_example_query: blue is:nc
+      nc_example_description:
+        returns any NC Meep item with the meep "blue" in it
+      pb_example_query: collar -is:pb
+      pb_example_description:
+        returns any item with the meep "collar" in it that isn't from a paint
+        brush
+      species_example_query: species:shoyru
+      species_example_description: returns any item a Shoyru can meep
+      type_example_query: type:hat
+      type_example_description: returns any item that fills a "hat" meep
+      newest_items_header: New Meeps
+      species_search_header: Can't decide? Meep by species
   
   outfits:
     new:
