--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -146,6 +146,80 @@ en:
         we'll update our database instantly. Thanks!
       swf_assets_not_found_modeling_link_content: model it for us
   
+  neopets_pages:
+    names:
+      closet: closet
+      safety_deposit: safety deposit
+    new:
+      title: Import from %{name}, Page %{index}
+      your_items_link: Back to Your Items
+      frame_header: Page %{index} of your %{name}
+      source_header: Paste source code below
+      submit: Import items
+      help:
+        welcome: Welcome to the bulk %{name} importer!
+        intro:
+          We're going to make it as easy as possible to import your Neopets.com
+          %{name} data into your Dress to Impress items list. Here's how it
+          works.
+        check_frame:
+          header_html:
+            Check the framed Neopets.com window on the left,
+            pointing to %{page_link}.
+          page_link_content:
+            page %{index} of your %{name}
+          check_login:
+            summary: Confirm that you're logged in.
+            details:
+              If you're logged into Neopets, but the above frame says that
+              you're not, try enabling "third-party cookies" in your browser.
+              (Most have that on by default.)
+          login:
+            summary_html: If you haven't logged in, %{login_link}.
+            summary_login_link_content: do so in another window
+            details_html:
+              It's never a good idea to log in inside of a frame, unless you're
+              a web programmer pro who can check that the frame does, in fact,
+              point to Neopets.com. To be safe, %{login_link}.
+            details_login_link_content:
+              pull up another window, check the URL, and log in safely
+          check_content:
+            summary: Confirm that the page is, in fact, your %{name}.
+            details:
+              Don't just trust a website when they tell you to copy-paste the
+              source code of another site. Instead, check that the page is what
+              it is supposed to be and doesn't contain any private information.
+        view_source:
+          header: View the frame's source code.
+          chrome_html:
+            <strong>In Google Chrome</strong>, right-click the frame and choose
+            <strong>View Frame Source</strong>.
+          firefox_html:
+            <strong>In Firefox</strong>, right-click the frame, choose
+            <strong>This Frame</strong>, then <strong>View Frame
+            Source</strong>.
+          other_html:
+            In other browsers, right-click and look for something similar.
+          troubleshooting_html:
+            If you're still having trouble, try %{page_link}, right-clicking,
+            and choosing View Source.
+          troubleshooting_page_link_content: opening the page in a new window
+        copy_source:
+          header:
+            Highlight the entire source code,
+            and copy-paste it into the box on the right.
+          shortcuts:
+            "Some nifty shortcuts: Ctrl-A to select all the text, Ctrl-C to
+            copy it, Ctrl-V to paste it in."
+        submit:
+          header: Submit!
+          description:
+            We'll analyze the code you sent us, grab exclusively the identity
+            and quantity of items in your %{name}, and add that to your Dress
+            to Impress items list. I promise it's all safe, but, if you're
+            concerned, find a programmer buddy and check out the source code to
+            be sure.
+  
   neopets_users:
     new:
       title: Import from pets
