--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -90,7 +90,25 @@ en-meep:
         submit: Meep
         header: (Not in a meepit)
         empty: There aren't any meepits here.
-        
+    
+    petpage:
+      title: Export to meeppage
+      your_items_link: Back to Your Meeps
+      submit: Export meeped lists to meeppage
+      description:
+        We took your public lists and meeped a nice, simple HTML file for your
+        Neopet's petpage. By default it's meeped as a table, but it doesn't
+        have to meep. The HTML is flexible, so, if you're the artsy type, you're
+        free to meep with the styles all you want!
+      instructions_html:
+        Meep the HTML from the box below, then paste it into
+        %{edit_petpage_link}. Then meep to the Neoboards to show off! Have fun!
+      instructions_edit_petpage_link_content: your meepit's page
+    
+    petpage_content:
+      unlisted_header: (Not in a meep)
+      footer: I meeped this list on Dreep to Impreep. You can, too!
+    
     visibility:
       private:
         name: Preevate
@@ -201,6 +219,11 @@ en-meep:
       type_example_description: returns any item that fills a "hat" meep
       newest_items_header: New Meeps
       species_search_header: Can't decide? Meep by species
+    
+    item:
+      nc:
+        abbr: MC
+        description: This is a MC Meep item
     
     show:
       rarity: Meepity
