--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -44,6 +44,14 @@ en-meep:
       search: Meep
   
   broken_image_reports:
+    create:
+      success:
+        Thanks! This image will be remeeped soon. If it looks the same after
+        meeping, please consider sending a bug report.
+      already_reported:
+        This image is already in line for remeeping. We'll get to it soon,
+        don't worry.
+    
     new:
       title: Meep broken image
       explanation_html:
